2007-02-10  Sven Neumann  <sven@gimp.org>

	* modules/controller_linux_input.c
	* modules/controller_midi.c: changed license to GPL, updated
	copyright and module info.

2007-02-10  Michael Natterer  <mitch@gimp.org>

	Made templates say "ppi" instead of "dpi". Fixes bug #376990:

	* app/core/gimp-templates.c
	(gimp_templates_migrate_get_child_by_name): find the child also
	if the name differs only in the substrings "dpi" and "ppi".

	* app/core/gimpcontainer.c (gimp_container_deserialize): if we
	found a child, give it the deserialized name if it isn't the same
	as its old name.

	* etc/templaterc: applied patch from Michael Schumacher that
	replaces "dpi" by "ppi".

2007-02-10  Michael Natterer  <mitch@gimp.org>

	* modules/controller_linux_input.c: added some code stolen from
	DirectFB and forgotten on my disk a long time ago which queries
	the input device for available keys and axes (just for debugging
	purposes for now). Also add one more button event and some
	debugging output for incoming events.

2007-02-09  Michael Natterer  <mitch@gimp.org>

	* modules/controller_linux_input.c (linux_input_read_event): fix
	last commit a bit...

2007-02-09  Michael Natterer  <mitch@gimp.org>

	* modules/controller_linux_input.c (linux_input_read_event): emit
	GIMP_CONTROLLER_EVENT_VALUE, not TRIGGER for movements on relative
	axes. Reduces the number of events significantly. Now we can start
	thinking what to do with them...

2007-02-09  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpenvirontable.c: renamed newly added functions to
	gimp_environ_table_str_hash() and gimp_environ_table_str_equal()
	and always use them. Move the #ifdef G_OS_WIN32 inside the
	functions.

2007-02-09  Tor Lillqvist  <tml@novell.com>

	* app/plug-in/gimpenvirontable.c
	(gimp_environ_table_case_insensitive_hash)
	(gimp_environ_table_case_insensitive_equal): Win32-only case-
	insensitive hash and equality functions.
	(gimp_environ_table_load): On Win32, use the above functions for